Category grid layout issue fixed

--- a/Assets/CSS/Category.css
+++ b/Assets/CSS/Category.css
@@ -209,7 +209,7 @@ li {
 }
 
 .GridsTargetContent{
-    width: 33.3%;
+    width: 100%;
 }
 
 .CategoryGrid_icons {
